# python-uswid

./: RELEASE.md  pyproject.toml  setup.py
uswid/: __init__.py  _version.py  component.py  format_cyclonedx.py  test_uswid.py
